[project]
name = "stocktradebyz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "akshare==1.17.7",
    "loguru>=0.7.3",
    "mootdx==0.11.7",
    "pandas==2.3.0",
    "pymysql>=1.1.2",
    "scipy==1.14.1",
    "sqlalchemy>=2.0.44",
    "tqdm==4.66.4",
    "tushare==1.4.21",
]
